@@ -10,7 +10,7 @@
 ;
 
 :backend "test"               ; name of backend
-:version "1.0-18"                    ; version of backend
+:version "1.0-20"                    ; version of backend
 :status :stable                    ; :alpha, :beta, :stable, :new
 :manpage "sane-test"           ; name of manpage (if it exists)
 :url "http://www.meier-geinitz.de/sane/test-backend/" ; backend's web page
