@@ -31,6 +31,8 @@
 	  doc/descriptions-external/viceo.desc: Added description files for
 	  scanwit and viceo backends.
 	* doc/descriptions-external/tevion9693usb.desc: Removed (now included).
+	* backend/test.c doc/descriptions/test.desc: Make sure that frontend bugs
+	  concerning the select fd are detected.
 
 
 2002-12-28  Karl Heinz Kremer <khk@khk.net>
